--- a/_sass/0-base/style.sass
+++ b/_sass/0-base/style.sass
@@ -1,3 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800|Roboto:400,500,700')
 $font-stack: "Roboto", Ariel, sans-serif
 $font-stack-two: "Open Sans", Ariel, sans-serif
+
+// To make it easier to change stuff
+$white: #FFFFFF
+$black: #000000
+
+$primary_color: #1C1E24
+$secondary_color: #9EA3B4
+$highlight_color: #517AF4
+
+h1 
+	color: $primary_color
+
+h2
+	color: $primary_color
+
+h3
+	color: $primary_color
+
+h4
+	color: $primary_color
