--- a/_sass/2-layouts/index.sass
+++ b/_sass/2-layouts/index.sass
@@ -1,10 +1,10 @@
-//header
+//Style for index.html
 header.header-main
 	position: relative 
 	z-index: 1
 	display: flex
 	flex-direction: column
-	align-item: center
+	align-items: center
 	justify-content: center
 	width: 100%
 	height: 500px
@@ -12,3 +12,25 @@ header.header-main
 		size: cover
 		position: center center
 		repeat: no-repeat
+	
+	.overlay-light
+		position: absolute
+		z-index: 2
+		top: 0
+		bottom: 0
+		left: 0
+		right: 0
+		background: $white
+		opacity: .65
+
+	.home-title
+		position: relative
+		z-index: 3
+		text-align: center
+		padding-top: 50px
+
+		h1
+			font-size: 3.125em
+			padding: 0px 20px 5px 20px
+		h3
+			font-size: 1.25em
