--- a/_sass/2-layouts/index.sass
+++ b/_sass/2-layouts/index.sass
@@ -34,3 +34,27 @@ header.header-main
 			padding: 0px 20px 5px 20px
 		h3
 			font-size: 1.25em
+			padding: 10px 0px 20px
+	
+	.home-avatar
+		position: absolute
+		height: 100px
+		width: 100px
+		border-radius: 100%
+		z-index: 3
+		// padding: 20px 0px 20px
+		bottom: 0
+		left: 0
+		right: 0
+		margin: auto
+		margin-bottom: -50px
+		box-shadow: 0px 3px 6px 0px rgba(0,0,0,.25)
+		background:
+			image: url('../../assets/images/profilePic.jpg')
+			size: cover
+			position: center center
+			repeat: no-repeat
+		@media screen and(max-width: 335px)
+			height: 75px
+			width: 75px
+			// margin-bottom:-42px
