--- a/_sass/2-layouts/index.sass
+++ b/_sass/2-layouts/index.sass
@@ -57,4 +57,4 @@ header.header-main
 		@media screen and(max-width: 335px)
 			height: 75px
 			width: 75px
-			// margin-bottom:-42px
+			margin-bottom: -42px
