--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,1 +1,12 @@
-<!-- Navigation -->
+!<!-- Navigation -->
+<nav class="nav-wrap">
+	<a href="{{ site.baseurl }}/ class="nav-logo"></a>
+											   
+	<ul class="navigation">
+		<li><a href="{{ site.baseurl }}/"></a>Home</li>
+		<li><a href="{{ site.baseurl }}/projects">Projects</a></li>
+		<li><a href="{{ site.baseurl }}/blog"></a>Blog</li>
+		<li><a href="{{ site.baseurl }}/about"></a>About</li>
+
+	</ul>
+</nav>
