--- a/_sass/1-modules/nav.sass
+++ b/_sass/1-modules/nav.sass
@@ -11,4 +11,6 @@ nav.nav-wrap
 	justify-content: space-between
 	margin: auto
 	padding: 40px
-	list-style-type: none
+	list-style: none
+	@media screen and (max-width: 600px)
+	padding: 35px 20px 
