--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,10 +3,10 @@
 	<a href="{{ site.baseurl }}/ class="nav-logo"></a>
 											   
 	<ul class="navigation">
-		<li><a href="{{ site.baseurl }}/"></a>Home</li>
+		<li><a href="{{ site.baseurl }}/">Home</a></li>
 		<li><a href="{{ site.baseurl }}/projects">Projects</a></li>
-		<li><a href="{{ site.baseurl }}/blog"></a>Blog</li>
-		<li><a href="{{ site.baseurl }}/about"></a>About</li>
+		<li><a href="{{ site.baseurl }}/blog">Blog</a></li>
+		<li><a href="{{ site.baseurl }}/about">About</a></li>
 
 	</ul>
 </nav>
