--- a/_sass/1-modules/nav.sass
+++ b/_sass/1-modules/nav.sass
@@ -26,8 +26,8 @@ nav.nav-wrap
 		align-items: center
 		@media screen and (max-width: 600px)
 			display: none
-		li
-			display: block
-			padding-right: 30px
-		li:last-of-type
-			padding-right: 0
+		// li
+		// 	display: block
+		// 	padding-right: 30px
+		// li:last-of-type
+		// 	padding-right: 0
