--- a/_sass/0-base/style.sass
+++ b/_sass/0-base/style.sass
@@ -15,9 +15,19 @@ h1
 
 h2
 	color: $primary_color
+	font-size: 1.875em
+	font-weight: 500
+	line-height: 1.2em
+	opacity: .85
 
 h3
 	color: $primary_color
 
 h4
 	color: $primary_color
+
+p
+	font-size: 1em
+	font-weight: 200
+	color: $secondary_color
+	line-height: 2.25em
