--- a/_sass/2-layouts/index.sass
+++ b/_sass/2-layouts/index.sass
@@ -58,3 +58,18 @@ header.header-main
 			height: 75px
 			width: 75px
 			margin-bottom: -42px
+
+// Who am i section
+.who-is-he
+	max-width: 600px
+	margin: 160px auto 100px auto
+	padding: 0px 30px 0px
+	h2
+		padding-bottom: 17px
+	p
+		a
+			font-weight: 600
+			color: $highlight_color
+			transistion: .15s ease-in-out
+			&:hover
+				color: $secondary-color
