--- a/_sass/1-modules/nav.sass
+++ b/_sass/1-modules/nav.sass
@@ -2,7 +2,6 @@ nav.nav-wrap
 	transition: all 0.3s ease-in
 	position: absolute
 	top: 0
-	bottom: 0
 	left: 0
 	right: 0
 	z-index: 100
@@ -18,6 +17,10 @@ nav.nav-wrap
 		svg
 			height: 100%
 			width: auto
+	a.nav-logo.nav-dark
+		svg
+			path
+				fill: $primary-color
 	ul.navigation
 		list-style: none
 		display: flex
@@ -26,8 +29,21 @@ nav.nav-wrap
 		align-items: center
 		@media screen and (max-width: 600px)
 			display: none
-		// li
-		// 	display: block
-		// 	padding-right: 30px
-		// li:last-of-type
-		// 	padding-right: 0
+		li
+			display: block
+			padding-right: 30px
+			a
+				color: $white
+				transition: all .15s ease-in
+				font-size: 1em
+			a:hover
+				color: darken($white, 25%)
+		li:last-of-type
+			padding-right: 0
+	ul.navigation.nav-dark
+		li
+			a
+				color: $primary-color
+			a:hover
+				color: darken($white, 25%)
+				font-size: 100em
