--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,8 @@
-!<!-- Navigation -->
+<!-- Navigation -->
+<!-- Here's an arbitrary exclaimation mark -->
+!
 <nav class="nav-wrap">
-	<a href="{{ site.baseurl }}/ class="nav-logo">
+	<a href="{{ site.baseurl }}/" class="nav-logo">
 		<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" viewBox="0 0 640 640" width="50" height="50"><defs><path d="M544.19 145.27L544.19 247.55L61.21 247.55L163.49 145.27L544.19 145.27ZM163.49 145.27L265.77 42.99L265.77 145.27L163.49 145.27Z" id="a2eeeyB2T"></path><path d="M441.91 504.21L339.63 606.5L339.63 504.21L61.21 504.21L61.21 401.93L544.19 401.93L441.91 504.21L441.91 504.21Z" id="b2nc7CbmaD"></path><path d="M368.49 324.21C368.49 360.52 339.01 390 302.7 390C266.39 390 236.91 360.52 236.91 324.21C236.91 287.9 266.39 258.42 302.7 258.42C339.01 258.42 368.49 287.9 368.49 324.21Z" id="fmxxyzb3"></path></defs><g><g><g><use xlink:href="#a2eeeyB2T" opacity="1" fill="#10180e" fill-opacity="1"></use></g><g><use xlink:href="#b2nc7CbmaD" opacity="1" fill="#10180e" fill-opacity="1"></use></g><g><use xlink:href="#fmxxyzb3" opacity="1" fill="#10180e" fill-opacity="1"></use></g></g></g></svg>
 	</a>
 											   
@@ -9,6 +11,90 @@
 		<li><a href="{{ site.baseurl }}/projects">Projects</a></li>
 		<li><a href="{{ site.baseurl }}/blog">Blog</a></li>
 		<li><a href="{{ site.baseurl }}/about">About</a></li>
-
 	</ul>
+
+	<!-- Start mobile nav -->
+	<!-- This should open the wrapper: only an icon -->
+	<div class="nav-toggle-open {% if page.url == '/'%}nav-dark{% endif %}">
+		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+			<path d="M0 0h24v24H0z" fill="none"/>
+			<path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/>
+		</svg>
+	</div>
+
+	<div class="nav-toggle-body-overlay">
+		
+	</div>
+	<!-- The wrapper is called -->
+	<div class="nav-toggled-wrapper">
+		<!-- Top of the wrapper is a close icon -->
+		<div class="nav-toggle-close">
+			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+				<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
+				<path d="M0 0h24v24H0z" fill="none"/>
+			</svg>
+		</div>
+		<!-- All my Personal links -->
+		<div class="internal-links-wrapper">
+			
+			<a href="{{ site.baseurl }}/" class="internal-link">
+				<div class="link-titles">
+					<h5>Home</h5>
+					<small>Who I?</small>
+				</div>
+				<div class="internal-link-icon internal-link-icon-home">
+					
+				</div>
+			</a>
+			
+			<a href="{{ site.baseurl }}/projects" class="internal-link">
+				<div class="link-titles">
+					<h5>Projects</h5>
+					<small>What is the point?</small>
+				</div>
+				<div class="internal-link-icon internal-link-icon-projects">
+
+				</div>
+			</a>
+			
+			<a href="{{ site.baseurl }}/blog" class="internal-link">
+				<div class="link-titles">
+					<h5>Blog</h5>
+					<small>The routine</small>
+				</div>
+				<div class="internal-link-icon internal-link-icon-blog">
+					
+				</div>
+			</a>
+			
+			<a href="{{ site.baseurl }}/about" class="internal-link">
+				<div class="link-titles">
+					<h5>About</h5>
+					<small>Why?</small>
+				</div>
+				<div class="internal-link-icon internal-link-icon-about">
+					
+				</div>
+			</a>
+
+		</div>
+
+		<hr>
+
+		<!-- External Links -->
+		<div class="external-links-wrapper">
+
+			<a href="{{ site.$instagram_path }}" target="_blank" class="external-link">
+				<div class="link-titles">
+					<h6>Instagram</h6>
+					<small>Follow me</small>
+				</div>
+				<div class="external-link-icon external-link-icon-instagram">
+					
+				</div>
+			</a>
+		</div>
+		
+	</div>
+
 </nav>
