--- a/_sass/1-modules/nav.sass
+++ b/_sass/1-modules/nav.sass
@@ -46,3 +46,79 @@ nav.nav-wrap
 				color: $primary-color
 			a:hover
 				color: darken($white, 25%)
+
+.nav-toggle-open, .nav-toggle-close
+	position: relative
+	height: 50px
+	width: 50px
+	display: flex
+	justify-content: center
+	align-items: center
+	cursor: pointer
+	overflow: visable
+	svg
+		height: auto
+		width: 24px
+
+.nav-toggled-wrapper
+	transition: all 0.2s ease-in-out
+	display: flex
+	align-items: flex-end
+	flex-direction: column
+	position: fixed
+	top: 0
+	right: 0
+	bottom: 0
+	z-index: 200
+	width: 300px
+	height: 100%
+	padding: 35px 20px 35px 0px
+	background: $white
+	// transform: translateX(300px)
+
+	.internal-links-wrapper, .external-links-wrapper
+		display: flex
+		flex-direction: column
+		justify-content: space-between
+		align-items: right
+
+	hr
+		width: 100%
+		margin: 30px 0px 60px 0px
+
+	.internal-links-wrapper
+		margin-top: 50px
+		height: 192px
+		a.internal-link
+			display: flex
+			flex-direction: row
+			justify-content: flex-end
+			align-items: center
+
+	.external-links-wrapper
+		height: 122px
+		a.external-link
+			display: flex
+			flex-direction: row
+			justify-content: flex-end
+			align-items: center
+
+.internal-link-icon, .external-link-icon
+	height: 30px
+	width: 30px
+	margin-left: 20px
+	background:
+		size: contain
+		position: center center
+		repeat: no-repeat
+
+.internal-link-icon-home
+	background-image: url(../images/icons/baseline-home-24px.svg)
+.internal-link-icon-projects
+	background-image: url(../images/icons/baseline-chrome_reader_mode-24px.svg)
+.internal-link-icon-blog
+	background-image: url(../images/icons/baseline-speaker_notes-24px.svg)
+.internal-link-icon-about
+	background-image: url(../images/icons/baseline-person-24px.svg)
+.external-link-icon-instagram
+	background-image: url(../images/icons/instagram.svg)
