mobile nav finished

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,9 +22,8 @@
 		</svg>
 	</div>
 
-	<div class="nav-toggle-body-overlay">
-		
-	</div>
+	<div class="nav-toggle-body-overlay"></div>
+
 	<!-- The wrapper is called -->
 	<div class="nav-toggled-wrapper">
 		<!-- Top of the wrapper is a close icon -->
@@ -40,7 +39,7 @@
 			<a href="{{ site.baseurl }}/" class="internal-link">
 				<div class="link-titles">
 					<h5>Home</h5>
-					<small>Who I?</small>
+					<small>Who?</small>
 				</div>
 				<div class="internal-link-icon internal-link-icon-home">
 					
@@ -50,7 +49,7 @@
 			<a href="{{ site.baseurl }}/projects" class="internal-link">
 				<div class="link-titles">
 					<h5>Projects</h5>
-					<small>What is the point?</small>
+					<small>What?</small>
 				</div>
 				<div class="internal-link-icon internal-link-icon-projects">
 
@@ -60,7 +59,7 @@
 			<a href="{{ site.baseurl }}/blog" class="internal-link">
 				<div class="link-titles">
 					<h5>Blog</h5>
-					<small>The routine</small>
+					<small>How?</small>
 				</div>
 				<div class="internal-link-icon internal-link-icon-blog">
 					
