--- a/_sass/0-base/style.sass
+++ b/_sass/0-base/style.sass
@@ -26,8 +26,29 @@ h3
 h4
 	color: $primary_color
 
+h5
+	font-size: 1.375em
+	font-weight: 400
+	color: $primary_color
+
+h6
+	font-size: 0.75em
+	text-transform: uppercase
+	font-weight: 600
+	color: $secondary_color
+
+small
+	font-size: 0.75em
+	font-weight: 300
+	color: $secondary_color
+	text-transform: uppercase
 p
 	font-size: 1em
 	font-weight: 200
 	color: $secondary_color
 	line-height: 2.2em
+
+hr
+	border-style: solid
+	color: $secondary_color
+	opacity: .1
