--- a/_sass/1-modules/nav.sass
+++ b/_sass/1-modules/nav.sass
@@ -74,13 +74,13 @@ nav.nav-wrap
 	height: 100%
 	padding: 35px 20px 35px 0px
 	background: $white
-	// transform: translateX(300px)
+	transform: translateX(300px)
 
 	.internal-links-wrapper, .external-links-wrapper
 		display: flex
 		flex-direction: column
 		justify-content: space-between
-		align-items: right
+		text-align: right
 
 	hr
 		width: 100%
@@ -122,3 +122,35 @@ nav.nav-wrap
 	background-image: url(../images/icons/baseline-person-24px.svg)
 .external-link-icon-instagram
 	background-image: url(../images/icons/instagram.svg)
+
+.nav-toggle-body-overlay
+	transition: opacity 0.2s ease-in-out, transform 0s ease-in-out
+	display: block
+	position: fixed
+	top: 0
+	bottom: 0
+	right: 0
+	left: 0
+	z-index: 200
+	width: 100%
+	height: 100%
+	background: rgba(0,0,0,0.7)
+	opacity: 0
+	transform: translateX(100%)
+html.nav-open
+	body
+		overflow: hidden
+		position: fixed
+		top: 0
+		bottom: 0
+		left: 0
+		right: 0
+	.nav-toggle-body-overlay
+		transition: opacity 0.2s ease-in-out, transform 0s
+		opacity: 1
+		transform: translateX(0)
+	.nav-toggled-wrapper
+		transform: translateX(0)
+@media screen and(min-width: 600px)
+	.nav-toggle-open, .nav-toggle-close, .nav-toggled-wrapper, .nav-toggle-body-overlay
+		display: none
