--- a/_sass/2-layouts/index.sass
+++ b/_sass/2-layouts/index.sass
@@ -73,3 +73,79 @@ header.header-main
 			transistion: .15s ease-in-out
 			&:hover
 				color: $secondary-color
+
+// Edu Section
+h2.education
+	text-align: center
+	padding-top: 100px
+
+.edu-content-wrapper
+	margin: auto
+	max-width: 800px
+	padding: 60px 20px 0px 20px
+	display: flex
+	flex-direction: column
+	align-items: center
+	.edu-wrap
+		width: 100%
+		display: flex
+		justify-content: flex-start
+		.edu
+			max-width: 465px
+			min-height: 100px
+			margin: 20px 0
+			display: flex
+			flex-direction: row
+			justify-content: space-around
+			.edu-img
+				background: $primary_color
+				height: 100px
+				width: 100px
+				flex: 0 0 100px
+				border-radius: 3px
+				cursor: pointer
+				background:
+					size: cover
+					position: center center
+					repeat: no-repeat
+			.edu-img-one
+				background:
+					image: url('../../assets/images/ASU_LOGO.jpg')
+			.edu-img-two
+				background:
+					image: url('../../assets/images/ASU_LOGO.jpg')
+	.edu-wrap-reverse
+		justify-content: flex-end
+		.edu
+			flex-direction: row-reverse
+			.edu-text
+				text-align: right
+				margin-right: 15px
+				margin-left: 0
+	@media screen and (max-width: 465px) 
+		.edu-wrap
+			.edu
+				flex-direction: column
+				min-height: 199px
+				.edu-text
+					margin: 6px 0 0 0
+		.edu-wrap-reverse
+			.edu
+				align-items: flex-end
+				flex-direction: column
+				min-height: 189px
+				.edu-text
+					margin: 6px 0 0 0
+.edu-text
+	min-height: 83px
+	height: 100%
+	width: 100%
+	margin-left: 15px
+	display: flex
+	flex-direction: column
+	justify-content: space-around
+	padding: 5px 0
+	p
+		line-height: 1.1875em
+
+
