--- a/_sass/2-layouts/index.sass
+++ b/_sass/2-layouts/index.sass
@@ -75,29 +75,29 @@ header.header-main
 				color: $secondary-color
 
 // Edu Section
-h2.education
+h2.education, .experience
 	text-align: center
 	padding-top: 100px
 
-.edu-content-wrapper
+.edu-content-wrapper, .exp-content-wrapper
 	margin: auto
 	max-width: 800px
 	padding: 60px 20px 0px 20px
 	display: flex
 	flex-direction: column
 	align-items: center
-	.edu-wrap
+	.edu-wrap, .exp-wrap
 		width: 100%
 		display: flex
 		justify-content: flex-start
-		.edu
+		.edu, .exp
 			max-width: 465px
 			min-height: 100px
 			margin: 20px 0
 			display: flex
 			flex-direction: row
 			justify-content: space-around
-			.edu-img
+			.edu-img, .exp-img
 				background: $primary_color
 				height: 100px
 				width: 100px
@@ -110,10 +110,10 @@ h2.education
 					repeat: no-repeat
 			.edu-img-one
 				background:
-					image: url('../../assets/images/ASU_LOGO.jpg')
+					image: url('../../assets/images/icons/ASU_LOGO.jpg')
 			.edu-img-two
 				background:
-					image: url('../../assets/images/ASU_LOGO.jpg')
+					image: url('../../assets/images/icons/ASU_LOGO.jpg')
 	.edu-wrap-reverse
 		justify-content: flex-end
 		.edu
@@ -122,6 +122,8 @@ h2.education
 				text-align: right
 				margin-right: 15px
 				margin-left: 0
+.exp-content-wrapper
+	margin: 0 auto 100px auto
 	@media screen and (max-width: 465px) 
 		.edu-wrap
 			.edu
@@ -136,7 +138,7 @@ h2.education
 				min-height: 189px
 				.edu-text
 					margin: 6px 0 0 0
-.edu-text
+.edu-text, .exp-text
 	min-height: 83px
 	height: 100%
 	width: 100%
