--- a/_sass/1-modules/footer.sass
+++ b/_sass/1-modules/footer.sass
@@ -38,7 +38,7 @@ footer.foot-wrapper
 			background-image: url(../images/icons/Octocat.jpg)
 		.footer-email
 		transition: all 0.2s ease-in
-		font-family: $font-stack
+		font-family: $font-stack-one
 		font-size: 1em
 		color: $secondary_color
 		&:hover
