--- a/_sass/0-base/reset.sass
+++ b/_sass/0-base/reset.sass
@@ -4,7 +4,7 @@
 body
   margin: 0px
   padding: 0px
-  font-family: $font-stack
+  font-family: $font-stack-one
   font-size: 100%
   font-weight: 500
 h6, h5, h4, h3, h2, h1, p, a, small
