--- a/_sass/2-layouts/post.sass
+++ b/_sass/2-layouts/post.sass
@@ -73,3 +73,16 @@ h5.read-more-cta
 	font-family: $font-stack-one
 	padding: 2em 0
 	margin-top: 60px
+
+.blog-read-more-wrapper
+	width: 100%
+	max-width: 1200px
+	margin: 0 auto 0 auto
+	padding: 0 20px
+	display: flex
+	flex-direction: row
+	justify-content: space-around
+	align-items: baseline
+	flex-wrap: wrap
+	@media screen and(max-width: 700px)
+		padding: 0
