need to finish front page

--- a/_sass/2-layouts/index.sass
+++ b/_sass/2-layouts/index.sass
@@ -98,7 +98,7 @@ h2.education, .experience
 			flex-direction: row
 			justify-content: space-around
 			.edu-img, .exp-img
-				background: $primary_color
+				background: $white
 				height: 100px
 				width: 100px
 				flex: 0 0 100px
@@ -113,7 +113,7 @@ h2.education, .experience
 					image: url('../../assets/images/icons/ASU_LOGO.jpg')
 			.edu-img-two
 				background:
-					image: url('../../assets/images/icons/ASU_LOGO.jpg')
+					image: url('../../assets/images/icons/asu_sunburst_600ppi.png')
 	.edu-wrap-reverse
 		justify-content: flex-end
 		.edu
@@ -149,5 +149,3 @@ h2.education, .experience
 	padding: 5px 0
 	p
 		line-height: 1.1875em
-
-
