trying to add resume

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,7 @@
 
 	<div class="social-links">
 		<a href="{{ site.$instagram_path }}" target="_blank" class="social-icon-wrap footer-insta-wrapper"></a>
+		<a href="{{ site.$digication_path }}" target="_blank" class="social-icon-wrap footer-digication-wrapper"></a>
 		<a href="{{ site.$github_path }}" target="_blank" class="social-icon-wrap footer-github-wrapper"></a>
 	</div>
 
