--- a/_sass/1-modules/footer.sass
+++ b/_sass/1-modules/footer.sass
@@ -36,6 +36,8 @@ footer.foot-wrapper
 			background-image: url(../images/icons/instagram-colored.png)
 		.footer-github-wrapper
 			background-image: url(../images/icons/Octocat.jpg)
+		.footer-digication-wrapper
+			background-image: url(../images/icons/ASU_LOGO.jpg)
 		.footer-email
 		transition: all 0.2s ease-in
 		font-family: $font-stack-one
